gerard: updated tomcat startupscript for tomcat 3.2
git-svn-id: https://scm.mmbase.org/mmbase/trunk@1034 91430c5f-d668-0410-9e7d-dd663366dcfd